Add new method to get icon name for hide iteration button